--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ZooSeeker46</string>
+    <string name="search">Search</string>
+    <string name="search_hint" />
 </resources>
