--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ZooSeeker46</string>
     <string name="search">Search</string>
     <string name="search_hint" />
+    <string name="no_results">No Results</string>
 </resources>
