search bar tool
Signed-off-by: Luis Cedeno <lcedeno@ucsd.edu>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="search">Search</string>
     <string name="search_hint" />
     <string name="no_results">No Results</string>
+    <string name="plan">Plan</string>
+    <string name="empty">Empty</string>
+    <string name="no_results_found">No Results Found</string>
 </resources>
