--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="plan">Plan</string>
     <string name="empty">Empty</string>
     <string name="no_results_found">No Results Found</string>
+    <string name="clear">Clear</string>
 </resources>
